# react-actix-skeleton

./: .gitignore  Cargo.toml  README.md  frontend.sh  nginx_server_template  run.sh  setup.py  setup_nginx.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Spinner.tsx
frontend/src/components/icons/: Home.tsx
frontend/src/views/: Home.tsx  Users.tsx
src/: main.rs
src/api/: mod.rs
