[package]
name = "test_webapp"
version = "0.1.0"
authors = ["heinrich"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "^0.2"
listenfd = "0.3"
serde = "1.0"